--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "obj2gltf": "^3.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
