--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "anjana784",
   "license": "ISC",
   "dependencies": {
+    "basic-ftp": "^5.0.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "obj2gltf": "^3.1.4"
   },
