--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 3000
-# client_id = ''
-# client_secret = ''
+PORT = 3001
+client_id = 'd9abcdd3-e731-4bfe-a3b7-db20ea81f76b'
+client_secret = '08e9531256141fb5254d9d32e147f30c'
